--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "better-scroll": "^1.13.0",
     "bootstrap": "^3.3.7",
     "element-ui": "^2.0.10",
     "jquery": "^2.2.3",
