--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "better-scroll": "^1.13.0",
     "bootstrap": "^3.3.7",
     "element-ui": "^2.0.10",
     "jquery": "^2.2.3",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
