--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^3.3.7",
     "element-ui": "^2.0.10",
     "jquery": "^2.2.3",
+    "showdown": "^1.8.6",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
